# PTA-ciencia-de-dados-

./: .gitignore  README.md  alimentacao.py  debug_embeddings.py  ingest.py  ingest_tech.py  playground.py  pyproject.toml  requirements.txt  run_tech_agent.py  teste.py  teste_ingestao.py
agno_storage/: team_sessions.db
app/: alimentacao.py  main.py  storage.py
app/agents/: casa.py  construcao_agent.py  home_agent.py  router_leader.py  team.py  tech_agent.py
app/tools/: ler_csv_itens_pedidos.py  ler_csv_pedidos.py  ler_csv_produtos.py  ler_csv_vendedores.py
banco_agente_financeiro/banco_agente_financeiro.lance/_transactions/: 0-aef7e5ef-c251-496d-91ea-733e274729c3.txn
chromadb_storage/construcao_rag/: chroma.sqlite3
chromadb_storage/home_rag/: chroma.sqlite3
chromadb_storage/tech_rag/: chroma.sqlite3
db_construcao/db_construcao.lance/_indices/fts/: .managed.json  meta.json
db_construcao/db_construcao.lance/_transactions/: 0-1935caab-0fc6-4e31-ac8e-06c232c3fc8d.txn  1-b07d9282-ecd0-4bc8-9e20-d4087b0aaf7e.txn
